src/styles.css
:root {
  --primary: hsl(92, 20%, 35%);
  --error: #c44040;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  box-sizing: inherit;
  font-family: Inter, sans-serif;
  color: #000;
}

html,
body {
  width: 100%;
  height: 100%;
}

a {
  text-decoration: none;
  color: var(--primary);
}

p {
  margin-bottom: 1rem;
  line-height: 1.2;
}

button {
  border: none;
  cursor: pointer;
}

main {
  min-height: 100vh;
  display: grid;
  grid-template-columns: 1fr 2fr;
}

.hero {
  background-image: url("img/halie-west-leaves.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center top;
  color: #fff;
  position: relative;
}

.hero__title-wrapper {
  background-color: hsl(0, 0%, 0%, 0.45);
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0.5rem;
  margin-top: clamp(50px, 20vh, 160px);
}

.hero__logo {
  width: 70px;
  height: auto;
}

.hero__title {
  font-family: "Norse", fantasy;
  font-weight: bold;
  font-size: 4.5rem;
}

.hero__img-credit {
  position: absolute;
  bottom: 12px;
  width: 100%;
  text-align: center;
  font-size: 0.75rem;
  color: hsl(0, 0%, 100%, 0.8);
  padding: 0 0.5rem;
  margin: 0;
}

.hero__img-credit > a {
  color: inherit;
  text-decoration: underline;
}

section.content {
  background-color: #f9fafb;
}

.introduction {
  font-size: 1.3rem;
  font-weight: 700;
  padding: 6.5rem 1.5rem 1.5rem 1.5rem;
}

.introduction > p {
  max-width: 45ch;
  margin-bottom: 1.5rem;
}

.sign-up-form {
  background-color: #fff;
  padding: 1.5rem 2.5rem;
  box-shadow: 0 4px 8px hsl(0, 0%, 0%, 0.2);
  color: #212b39;
}

.sign-up-form__heading {
  font-size: 1.3rem;
  font-weight: 600;
}

.sign-up-form__input-container {
  display: flex;
  flex-flow: row wrap;
  gap: 1rem 2.5rem;
  max-width: 55ch;
}

.form-group {
  flex: 1;
}

.form-group label {
  display: block;
  text-transform: uppercase;
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 1px;
  color: #5d646f;
  margin-bottom: 0.2rem;
}

.form-group input {
  appearance: none;
  outline: none;
  color: #000;
  font-size: max(16px, 100%);
  border-radius: 4px;
  border: 2px solid #e5e7eb;
  padding: 0.5em;
  width: clamp(220px, 100%, 300px);
}

.form-group input:focus {
  box-shadow: 3px 3px 4px hsl(0, 0%, 0%, 0.2);
  border: 2px solid #6586e4;
}

.form-group input.error {
  border: 2px solid var(--error);
}

.password-error-msg {
  color: var(--error);
  font-size: 0.75rem;
  visibility: hidden;
}

.visible {
  visibility: visible;
}

.action {
  padding: 1.5rem 2rem;
  font-weight: 500;
}

.action a {
  font-weight: 700;
}

.submit-button {
  background-color: var(--primary);
  color: #fff;
  text-transform: capitalize;
  font-weight: 600;
  padding: 0.75rem 2rem;
  border-radius: 8px;
  margin-bottom: 1.5rem;
}

.submit-button:hover {
  background-color: hsl(92, 20%, 29%);
}

.submit-button:active {
  transform: scale(0.98);
}

@supports font-tech(variations) {
  em {
    font-style: normal;
    font-variation-settings: "slnt" -10;
  }
}

@media only screen and (max-width: 768px) {
  main {
    grid-template-columns: 1fr;
  }

  .hero {
    min-height: 80vh;
  }
}

